.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Duplicate_Service_Type_Mapping__c.object
<CustomObject>
    <description>Relationships between Service Type to use when looking for Duplicates.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__From_Service_Type_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>From Service Type Version</label>
        <referenceTo>Incap311__Service_Type_Version__c</referenceTo>
        <relationshipLabel>Duplicate Service Type Mappings</relationshipLabel>
        <relationshipName>Duplicate_Service_Type_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__To_Service_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>To Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Duplicate Service Type Mappings</relationshipLabel>
        <relationshipName>Duplicate_Service_Type_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Duplicate Service Type Mapping</label>
    <nameField>
        <displayFormat>DST-{0000}</displayFormat>
        <label>Duplicate Service Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Service Type Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>